--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -27,7 +27,7 @@
 		<div id="site-content">
 			<div class="site-header">
 				<div class="container">
-					<a href="index.html" id="branding">
+					<a href="index.jsp" id="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<div class="logo-text">
 							<h1 class="site-title">Company Name</h1>
@@ -39,11 +39,12 @@
 					<div class="main-navigation">
 						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 						<ul class="menu">
-							<li class="menu-item"><a href="index.html">Home</a></li>
-							<li class="menu-item"><a href="news.html">News</a></li>
-							<li class="menu-item current-menu-item"><a href="about.html">About</a></li>
-							<li class="menu-item"><a href="project.html">our Projects</a></li>
-							<li class="menu-item"><a href="contact.html">Contact</a></li>
+							<li class="menu-item current-menu-item"><a href="index.jsp">홈</a></li>
+							<li class="menu-item"><a href="news.html">자유게시판</a></li>
+							<li class="menu-item"><a href="about.html">Q&A 게시판</a></li>
+							<li class="menu-item"><a href="project.html">자료실 게시판</a></li>
+							<li class="menu-item"><a href="login.jsp">로그인</a></li>
+							<li class="menu-item"><a href="join.jsp">회원가입</a></li>
 						</ul> <!-- .menu -->
 					</div> <!-- .main-navigation -->
 
